--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_backup">Home</string>
-    <string name="menu_import">导入</string>
+    <string name="menu_restore">恢复</string>
     <string name="menu_import_old">导入阅读数据</string>
     <string name="menu_import_github">导入Github数据</string>
     <string name="menu_replace_rule">净化替换</string>
@@ -29,4 +29,5 @@
     <string name="edit">编辑</string>
     <string name="delete">删除</string>
     <string name="replace">净化替换</string>
+    <string name="not_available">暂无</string>
 </resources>
