--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="exit">退出</string>
     <string name="exit_no_save">还未保存,是否继续编辑</string>
     <string name="read_style">阅读样式设置</string>
-
+    <string name="version">版本</string>
     <string name="local">本地</string>
     <string name="search">搜索</string>
     <string name="net_error_10001">没有网络</string>
