--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -352,33 +352,20 @@
     <string name="rule_chapter_list">目录列表规则(ruleChapterList)</string>
     <string name="rule_chapter_name">章节名称规则(ruleChapterName)</string>
     <string name="rule_chapter_list_url">目录URL规则(ruleChapterUrl)</string>
-    <string name="rule_chapter_list_url_next">目录下一页规则(ruleChapterUrlNext)</string>
+    <string name="rule_next_toc_url">目录下一页规则(ruleChapterUrlNext)</string>
     <string name="rule_content_url">章节URL规则(ruleContentUrl)</string>
     <string name="rule_cover_url">封面规则(ruleCoverUrl)</string>
-    <string name="rule_introduce">简介规则(ruleIntroduce)</string>
-    <string name="rule_search_author">搜索作者规则(ruleSearchAuthor)</string>
-    <string name="rule_find_author">发现作者规则(ruleFindAuthor)</string>
-    <string name="rule_search_cover_url">搜索封面规则(ruleSearchCoverUrl)</string>
-    <string name="rule_find_cover_url">发现封面规则(ruleFindCoverUrl)</string>
-    <string name="rule_search_kind">搜索分类规则(ruleSearchKind)</string>
-    <string name="rule_find_kind">发现分类规则(ruleFindKind)</string>
-    <string name="rule_search_last_chapter">搜索最新章节规则(ruleSearchLastChapter)</string>
-    <string name="rule_find_last_chapter">发现最新章节规则(ruleFindLastChapter)</string>
-    <string name="rule_search_list">搜索列表规则(ruleSearchList)</string>
-    <string name="rule_find_list">发现列表规则(ruleFindList)</string>
-    <string name="rule_search_name">搜索书名规则(ruleSearchName)</string>
-    <string name="rule_find_name">发现书名规则(ruleFindName)</string>
-    <string name="rule_search_note_url">搜索书籍URL规则(ruleSearchNoteUrl)</string>
-    <string name="rule_find_note_url">发现书籍URL规则(ruleFindNoteUrl)</string>
-    <string name="rule_search_introduce">搜索简介规则(ruleSearchIntroduce)</string>
-    <string name="rule_find_introduce">发现简介规则(ruleFindIntroduce)</string>
+    <string name="rule_book_intro">简介规则(ruleIntroduce)</string>
+    <string name="rule_word_count">字数规则(ruleFindKind)</string>
+    <string name="rule_book_list">书籍列表规则(ruleFindKind)</string>
+    <string name="rule_book_url">书籍url规则</string>
     <string name="rule_search_url">搜索地址(ruleSearchUrl)</string>
-    <string name="rule_find_url">发现规则(ruleFindUrl)</string>
+    <string name="rule_find_url">发现地址规则(ruleFindUrl)</string>
     <string name="rule_content_url_next">正文下一页URL规则(ruleContentUrlNext)</string>
     <string name="book_url_pattern">书籍详情URL正则(ruleBookUrlPattern)</string>
     <string name="rule_book_info_init">书籍详情预处理规则(ruleBookInfoInit)</string>
     <string name="rule_book_kind">分类规则(ruleBookKind)</string>
-    <string name="rule_book_last_chapter">最新章节规则(ruleBookLastChapter)</string>
+    <string name="rule_last_chapter">最新章节规则(ruleBookLastChapter)</string>
     <string name="source_user_agent">HttpUserAgent</string>
     <string name="debug_source">调试书源</string>
     <string name="import_by_qr_code">二维码导入</string>
