--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,31 +342,32 @@
     <string name="login_source">登录%s</string>
     <string name="success">成功</string>
     <string name="source_no_login">当前源没有配置登陆地址</string>
+
     <string name="book_source_name">书源名称(bookSourceName)</string>
     <string name="book_source_url">书源URL(bookSourceUrl)</string>
     <string name="book_source_group">书源分组(bookSourceGroup)</string>
     <string name="book_source_login_url">登录URL(loginUrl)</string>
-    <string name="rule_book_author">作者规则(ruleBookAuthor)</string>
-    <string name="rule_book_content">正文规则(ruleBookContent)</string>
-    <string name="rule_book_name">书名规则(ruleBookName)</string>
-    <string name="rule_chapter_list">目录列表规则(ruleChapterList)</string>
+    <string name="rule_search_url">搜索地址(url)</string>
+    <string name="rule_find_url">发现地址规则(url)</string>
+    <string name="rule_book_list">书籍列表规则(bookList)</string>
+    <string name="rule_book_name">书名规则(name)</string>
+    <string name="rule_book_url">书籍url规则(bookUrl)</string>
+    <string name="rule_book_author">作者规则(author)</string>
+    <string name="rule_book_kind">分类规则(kind)</string>
+    <string name="rule_book_intro">简介规则(intro)</string>
+    <string name="rule_cover_url">封面规则(coverUrl)</string>
+    <string name="rule_last_chapter">最新章节规则(lastChapter)</string>
+    <string name="rule_word_count">字数规则(wordCount)</string>
+    <string name="book_url_pattern">详情URL正则(urlPattern)</string>
+    <string name="rule_book_info_init">预处理规则(init)</string>
+    <string name="rule_toc_url">目录URL规则(tocUrl)</string>
+    <string name="rule_next_toc_url">目录下一页规则(nextTocUrl)</string>
+    <string name="rule_chapter_list">目录列表规则(chapterList)</string>
     <string name="rule_chapter_name">章节名称规则(ruleChapterName)</string>
-    <string name="rule_chapter_list_url">目录URL规则(ruleChapterUrl)</string>
-    <string name="rule_next_toc_url">目录下一页规则(ruleChapterUrlNext)</string>
-    <string name="rule_content_url">章节URL规则(ruleContentUrl)</string>
-    <string name="rule_cover_url">封面规则(ruleCoverUrl)</string>
-    <string name="rule_book_intro">简介规则(ruleIntroduce)</string>
-    <string name="rule_word_count">字数规则(ruleFindKind)</string>
-    <string name="rule_book_list">书籍列表规则(ruleFindKind)</string>
-    <string name="rule_book_url">书籍url规则</string>
-    <string name="rule_search_url">搜索地址(ruleSearchUrl)</string>
-    <string name="rule_find_url">发现地址规则(ruleFindUrl)</string>
-    <string name="rule_content_url_next">正文下一页URL规则(ruleContentUrlNext)</string>
-    <string name="book_url_pattern">书籍详情URL正则(ruleBookUrlPattern)</string>
-    <string name="rule_book_info_init">书籍详情预处理规则(ruleBookInfoInit)</string>
-    <string name="rule_book_kind">分类规则(ruleBookKind)</string>
-    <string name="rule_last_chapter">最新章节规则(ruleBookLastChapter)</string>
-    <string name="source_user_agent">HttpUserAgent</string>
+    <string name="rule_chapter_url">章节URL规则(chapterUrl)</string>
+    <string name="rule_book_content">正文规则(content)</string>
+    <string name="rule_content_url_next">正文下一页URL规则(nextContentUrl)</string>
+    <string name="source_http_header">header</string>
     <string name="debug_source">调试书源</string>
     <string name="import_by_qr_code">二维码导入</string>
     <string name="scan_qr_code">扫描二维码</string>
