--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -467,4 +467,6 @@
     <string name="change_icon_summary">切换软件显示在桌面的图标</string>
     <string name="help">帮助</string>
     <string name="my">我的</string>
+    <string name="dsm_start"><![CDATA[<]]></string>
+    <string name="dsm_end"><![CDATA[>]]></string>
 </resources>
