--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="enable">启用</string>
 
     <string name="bookshelf">书架</string>
+    <string name="rss">订阅</string>
     <string name="recent_reading">最近阅读</string>
     <string name="last_read">最后阅读</string>
     <string name="read_summary">让阅读成为一种习惯。</string>
