--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -474,4 +474,5 @@
     <string name="dsm_start"><![CDATA[<]]></string>
     <string name="dsm_end"><![CDATA[>]]></string>
     <string name="reading">阅读</string>
+    <string name="load_toc_error">加载目录失败</string>
 </resources>
