--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -481,6 +481,6 @@
     <string name="dsm_start"><![CDATA[<]]></string>
     <string name="dsm_end"><![CDATA[>]]></string>
     <string name="reading">阅读</string>
-
+    <string name="battery_show">%d%%</string>
 
 </resources>
