--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -482,5 +482,6 @@
     <string name="dsm_end"><![CDATA[>]]></string>
     <string name="reading">阅读</string>
     <string name="battery_show">%d%%</string>
+    <string name="timer_m">%d分钟</string>
 
 </resources>
