--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,7 @@
     <string name="replace_to">替换为</string>
     <string name="img_cover">封面</string>
     <string name="book">书</string>
-    <string name="volume_open_page">音量键翻页</string>
+    <string name="volume_key_page">音量键翻页</string>
     <string name="click_open_page">点击翻页</string>
     <string name="click_all_next_page">点击总是翻下一页</string>
     <string name="open_page_anim">翻页动画</string>
@@ -292,7 +292,7 @@
     <string name="sys_file_picker">系统文件选择器</string>
     <string name="new_version">新版本</string>
     <string name="download_update">下载更新</string>
-    <string name="aloud_volume_page">朗读时音量键翻页</string>
+    <string name="volume_key_page_on_play">朗读时音量键翻页</string>
     <string name="tip_margin_change">Tip边距跟随边距调整</string>
     <string name="disable_update">禁止更新</string>
     <string name="allow_update">允许更新</string>
