--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -484,5 +484,6 @@
     <string name="battery_show">%d%%</string>
     <string name="timer_m">%d分钟</string>
     <string name="brightness_auto">自动亮度%s</string>
+    <string name="byPage">按页</string>
 
 </resources>
