--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
 
     <string name="edit">编辑</string>
     <string name="delete">删除</string>
-    <string name="replace">净化替换</string>
+    <string name="replace">替换</string>
+    <string name="replace_purify">替换净化</string>
     <string name="not_available">暂无</string>
     <string name="enable">启用</string>
 
