--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -486,5 +486,8 @@
     <string name="timer_m">%d分钟</string>
     <string name="brightness_auto">自动亮度%s</string>
     <string name="byPage">按页</string>
+    <string name="bg_image">背景图片</string>
+    <string name="bg_color">背景颜色</string>
+    <string name="text_color">文字颜色</string>
 
 </resources>
