--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -491,5 +491,6 @@
     <string name="text_color">文字颜色</string>
     <string name="select_image">选择图片</string>
     <string name="group_manage">分组管理</string>
+    <string name="group_edit">编辑分组</string>
 
 </resources>
