--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -493,5 +493,6 @@
     <string name="group_manage">分组管理</string>
     <string name="group_edit">编辑分组</string>
     <string name="add_group">添加分组</string>
+    <string name="add_replace_rule">新建替换</string>
 
 </resources>
