--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="read_aloud_t">正在朗读</string>
     <string name="read_aloud_s">点击打开阅读界面</string>
     <string name="text_return">返回</string>
-    <string name="refresh">重新加载</string>
+    <string name="refresh">刷新</string>
     <string name="start">开始</string>
     <string name="stop">停止</string>
     <string name="pause">暂停</string>
