--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -242,6 +242,7 @@
     <string name="arrange_bookshelf">整理书架</string>
     <string name="clear_bookshelf_s">这将会删除所有书籍，请谨慎操作。</string>
     <string name="search_book_source">搜索书源</string>
+    <string name="search_rss_source">搜索订阅源</string>
     <string name="search_book_source_num">搜索(共%d个书源)</string>
     <string name="chapter_list_size">目录(%d)</string>
     <string name="text_bold">加粗</string>
