--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,7 @@
     <string name="aloud_stop">朗读停止</string>
     <string name="clear_cache">清除缓存</string>
     <string name="action_save">保存</string>
+    <string name="edit_source">编辑源</string>
     <string name="edit_book_source">编辑书源</string>
     <string name="disable_book_source">禁用书源</string>
     <string name="add_book_source">新建书源</string>
