--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="enable">启用</string>
     <string name="replace_purify_search">替换净化-搜索</string>
     <string name="bookshelf">书架</string>
+    <string name="store_up">收藏</string>
     <string name="rss">订阅</string>
     <string name="all">全部</string>
     <string name="recent_reading">最近阅读</string>
