--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -534,5 +534,6 @@
     <string name="screen_find">筛选发现</string>
     <string name="dur_pos">当前位置：</string>
     <string name="precision_search">精准搜索</string>
+    <string name="service_starting">正在启动服务</string>
 
 </resources>
