--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -536,5 +536,7 @@
     <string name="precision_search">精准搜索</string>
     <string name="service_starting">正在启动服务</string>
     <string name="empty">空</string>
+    <string name="file_chooser">文件选择</string>
+    <string name="folder_chooser">文件夹选择</string>
 
 </resources>
