--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -541,5 +541,8 @@
     <string name="folder_chooser">文件夹选择</string>
     <string name="bottom_line">我是有底线的</string>
     <string name="uri_to_path_fail">Uri转Path失败</string>
+    <string name="refresh_cover">刷新封面</string>
+    <string name="change_cover_source">封面换源</string>
+    <string name="select_local_image">选择本地图片</string>
 
 </resources>
